--- a/step.yml
+++ b/step.yml
@@ -9,7 +9,7 @@ support_url: https://github.com/bitrise-steplib/steps-xcode-archive-mac/issues
 host_os_tags:
   - "osx-10.10"
 project_type_tags:
-  - mac
+  - macos
 type_tags:
   - build
   - xcode
