--- a/bitrise.yml
+++ b/bitrise.yml
@@ -6,10 +6,10 @@ app:
   - RELEASE_VERSION: 1.3.3
 
   # define these in your .bitrise.secrets.yml
-  - SAMPLE_APP_REPOSITORY_URL: https://github.com/bitrise-samples/sample-apps-osx-10-11.git
-  - SAMPLE_APP_CLONE_INTO_DIR: "./sample-apps-osx-10-11"
-  - BITRISE_PROJECT_PATH: sample-apps-osx-10-11.xcodeproj
-  - BITRISE_SCHEME: sample-apps-osx-10-11
+  - SAMPLE_APP_REPOSITORY_URL: https://github.com/bitrise-samples/sample-apps-osx-10-12.git
+  - SAMPLE_APP_CLONE_INTO_DIR: "./sample-apps-osx-10-12"
+  - BITRISE_PROJECT_PATH: sample-apps-osx-10-12.xcodeproj
+  - BITRISE_SCHEME: sample-apps-osx-10-12
     # optional
   - PROJECT_WORKDIR: $PROJECT_WORKDIR
   - BITRISE_DEPLOY_DIR: $BITRISE_DEPLOY_DIR
@@ -21,11 +21,19 @@ workflows:
   # ----------------------------------------------------------------
   # --- workflow to Step Test
   test:
+    before_run:
+    - go-tests
     steps:
     - script:
         title: Step audit
         inputs:
         - content: stepman audit --step-yml=./step.yml
+    - script:
+        title: Clean temp dir
+        inputs:
+        - content: |
+            set -ex
+            rm -rf ./_tmp
     - change-workdir:
         title: Switch working dir to test/_tmp dir
         description: |-
@@ -72,6 +80,88 @@ workflows:
         - content: |-
             echo "-> BITRISE_EXPORTED_FILE_PATH: ${BITRISE_EXPORTED_FILE_PATH}"
             echo "-> BITRISE_DSYM_PATH: ${BITRISE_DSYM_PATH}"
+
+  go-tests:
+    before_run:
+    - _install-test-tools
+    steps:
+    - script:
+        title: Export go files to test
+        inputs:
+        - content: |-
+            #!/bin/bash
+            set -ex
+
+            no_vendor_paths="$(go list ./... | grep -v vendor)"
+            envman add --key GOLIST_WITHOUT_VENDOR --value "$no_vendor_paths"
+    - script:
+        title: Err check
+        inputs:
+        - content: |-
+            #!/bin/bash
+            set -ex
+
+            errcheck -asserts=true -blank=true $GOLIST_WITHOUT_VENDOR
+    - script:
+        title: Go lint
+        inputs:
+        - content: |-
+            #!/bin/bash
+            set -ex
+
+            while read -r line; do
+              echo "-> Linting: $line"
+              golint_out="$(golint $line)"
+              if [[ "${golint_out}" != "" ]] ; then
+                echo "=> Golint issues found:"
+                echo "${golint_out}"
+                exit 1
+              fi
+            done <<< "$GOLIST_WITHOUT_VENDOR"
+    - script:
+        title: Go test
+        inputs:
+        - content: |-
+            #!/bin/bash
+            set -ex
+
+            go test ./...
+
+  _install-test-tools:
+    steps:
+    - script:
+        title: Install required testing tools
+        inputs:
+        - content: |-
+            #!/bin/bash
+            set -ex
+
+            # Check for unhandled errors
+            go get -u -v github.com/kisielk/errcheck
+
+            # Go lint
+            go get -u -v github.com/golang/lint/golint
+
+  # ----------------------------------------------------------------
+  # --- Utility workflows
+  godeps-update:
+    title: Godeps update
+    description: |
+      Used for updating bitrise dependencies with godep
+    steps:
+    - script:
+        title: Dependency update
+        inputs:
+        - content: |
+            #!/bin/bash
+            set -ex
+            go get -u -v github.com/tools/godep
+
+            rm -rf ./Godeps
+            rm -rf ./vendor
+
+            go get -t -d ./...
+            godep save ./...
 
   # ----------------------------------------------------------------
   # --- workflow to create Release version
