--- a/bitrise.yml
+++ b/bitrise.yml
@@ -78,6 +78,8 @@ workflows:
         - content: |-
             echo "-> BITRISE_EXPORTED_FILE_PATH: ${BITRISE_EXPORTED_FILE_PATH}"
             echo "-> BITRISE_DSYM_PATH: ${BITRISE_DSYM_PATH}"
+            echo "-> BITRISE_APP_PATH: ${BITRISE_APP_PATH}"
+            echo "-> BITRISE_XCARCHIVE_PATH: ${BITRISE_XCARCHIVE_PATH}"
 
   go-tests:
     before_run:
