--- a/bitrise.yml
+++ b/bitrise.yml
@@ -80,6 +80,7 @@ workflows:
             echo "-> BITRISE_DSYM_PATH: ${BITRISE_DSYM_PATH}"
             echo "-> BITRISE_APP_PATH: ${BITRISE_APP_PATH}"
             echo "-> BITRISE_XCARCHIVE_PATH: ${BITRISE_XCARCHIVE_PATH}"
+            echo "-> BITRISE_XCARCHIVE_DIR_PATH: ${BITRISE_XCARCHIVE_DIR_PATH}"
 
   go-tests:
     before_run:
@@ -156,6 +157,7 @@ workflows:
             #!/bin/bash
             set -ex
             go get -u -v github.com/tools/godep
+            go get -u -v github.com/hashicorp/go-version
 
             rm -rf ./Godeps
             rm -rf ./vendor
