--- a/step.yml
+++ b/step.yml
@@ -61,7 +61,7 @@ inputs:
         - enterprise
         - development
 
-        If step doesn't find export method based on provisioning profile, development will be use.
+        If the step doesn't find an export method based on the provisioning profile(s), the development method will be used.
 
         Call `xcodebuild -help` for available export options.
       category: "app/pkg export configs"
@@ -86,12 +86,12 @@ inputs:
       title: "Configuration name"
       summary: ""
       description: |
-        (optional) The configuration to use. By default your Scheme
+        (optional) The configuration to use. By default, your Scheme
         defines which configuration (Debug, Release, ...) should be used,
         but you can overwrite it with this option.
         **Make sure that the Configuration you specify actually exists
-        in your Xcode Project**. If it does not, if you have a typo
-        in the value of this input Xcode will simply use the Configuration
+        in your Xcode Project**. If it does not (for example, if you have a typo
+        in the value of this input), Xcode will simply use the Configuration
         specified by the Scheme and will silently ignore this parameter!
       category: "xcodebuild configs"
   - is_clean_build: "yes"
@@ -108,7 +108,7 @@ inputs:
       summary: ""
       description: |
         Working directory of the step.
-        You can leave it empty to don't change it.
+        You can leave it empty to leave the working directory unchanged.
       category: "xcodebuild configs"
   - disable_index_while_building: "yes"
     opts:
@@ -137,7 +137,7 @@ inputs:
       description: |-
         Used for Xcode version 8 and above.
 
-        Force xcodebuild to use specified Developer Portal team during archive.
+        Force xcodebuild to use the specified Developer Portal team during archive.
 
         Format example:
 
@@ -149,12 +149,12 @@ inputs:
       description: |-
         Force xcodebuild to use specified Code Sign Identity.
 
-        Specify code sign identity as full ID (e.g. `Mac Developer: Bitrise Bot (VV2J4SV8V4)`)
-        or specify code sign group ( `Mac Developer` or `Mac Distribution` ).
+        Specify code signing identity as full ID (e.g. `Mac Developer: Bitrise Bot (VV2J4SV8V4)`)
+        or specify code signing group ( `Mac Developer` or `Mac Distribution` ).
 
         You also have to **specify the Identity in the format it's stored in Xcode project settings**,
         and **not how it's presented in the Xcode.app GUI**!
-        **Capitalization also matters**, `Mac Distribution` works but `mac distribution` does not!
+        **The input is case sensitive**: `Mac Distribution` works but `mac distribution` does not!
       category: "force archive codesign settings"
   - force_provisioning_profile_specifier:
     opts:
@@ -178,13 +178,13 @@ inputs:
     opts:
       title: "Force code signing with Provisioning Profile"
       description: |-
-        Force xcodebuild to use specified Provisioning Profile.
+        Force xcodebuild to use the specified Provisioning Profile.
 
-        Use Provisioning Profile's UUID, profile's name is not acceptable by xcodebuild.
+        Use Provisioning Profile's UUID. The profile's name is not accepted by xcodebuild.
 
         How to get your UUID:
 
-        - In xcode select your project -> Build Settings -> Code Signing
+        - In Xcode select your project -> Build Settings -> Code Signing
         - Select the desired Provisioning Profile, then scroll down in profile list and click on Other...
         - The popup will show your profile's UUID.
 
