--- a/bitrise.yml
+++ b/bitrise.yml
@@ -22,7 +22,7 @@ workflows:
     - go-test:
     - certificate-and-profile-installer:
         inputs:
-        - install_defaults: "false"
+        - install_defaults: "no"
     after_run:
     - _app_store
     - _copy
