--- a/step.yml
+++ b/step.yml
@@ -65,6 +65,15 @@ inputs:
 
         Call `xcodebuild -help` for available export options.
       category: "app/pkg export configs"
+  - xcodebuild_options:
+    opts:
+      category: Debug
+      title: Additional options for xcodebuild call
+      description: |-
+        Options added to the end of the xcodebuild call.
+
+        You can use multiple options, separated by a space
+        character. Example: `-xcconfig PATH -verbose`
   - project_path: $BITRISE_PROJECT_PATH
     opts:
       title: "Project (or Workspace) path"
