--- a/bitrise.yml
+++ b/bitrise.yml
@@ -2,9 +2,6 @@ format_version: "11"
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 
 workflows:
-#  sample:
-#    steps:
-#    ...
 
   check:
     steps:
@@ -22,4 +19,4 @@ workflows:
         title: Generate README
         inputs:
         - contrib_section: docs/contribution.md
-#        - example_section: docs/examples.md
+        - example_section: docs/examples.md
