--- a/e2e/bitrise.yml
+++ b/e2e/bitrise.yml
@@ -52,7 +52,7 @@ workflows:
         - is_create_path: true
     - git::https://github.com/bitrise-steplib/bitrise-step-simple-git-clone.git:
         inputs:
-        - repository_url: $SAMPLE_APP_URL
+        - repository_url: $TEST_APP_URL
         - branch: $BRANCH
         - clone_into_dir: ./
     - certificate-and-profile-installer:
