--- a/step.yml
+++ b/step.yml
@@ -7,13 +7,13 @@ description: |
 
   Before you start:
   
-  Make sure certificates are uploaded to Bitrise's **Code Signing** tab.
+  Make sure your certificates are uploaded to Bitrise's **Code Signing** tab.
 
   To configure the Step:
   
   Under **app/pkg export configs**:
 
-  1. Select the method Xcode should sign your project in the **Export method** input.
+  1. Select the signing method for your project Xcode should use in the **Export method** input.
   1. (Optional) Specify a custom export option in the **Custom export options plist content** input. If you leave this input blank or the Step doesn't find an export method based on the provisioning profile(s), the Step will use the development method.
 
   Under **xcodebuild configs**:
@@ -30,7 +30,7 @@ description: |
 
   Under **step output configs**:
 
-  1. Select an `xcodebuild` command log format in the **Output tool** input. Available options are `xcpretty`: The xcodebuild command's output will be prettified by xcpretty. `xcodebuild`: Only the last 20 lines of raw xcodebuild output will be visible in the build log. The raw xcodebuild log is exported in both cases.
+  1. Select an `xcodebuild` command log format in the **Output tool** input. Available options are `xcpretty`: The xcodebuild command's output will be prettified by xcpretty, and `xcodebuild`: Only the last 20 lines of raw xcodebuild output will be visible in the build log. The raw xcodebuild log is exported in both cases.
   1. Specify which directory will contain the generated `.app` or `.pkg` files and the `.dSYM.zip` files in the **Output directory** input. 
   1. Provide a name to use as a basename for the generated files in the **Generated Artifact Name** input.
   1. If you want to export the archive, set the **Export the generated archive?** input to `yes`. This will compress the generated files into a zip file and move them to a folder `output_dir`.
