--- a/step.yml
+++ b/step.yml
@@ -1,8 +1,55 @@
 title: Xcode Archive for Mac
-summary: |-
-  Create an archive for your macOS project so you can share it, upload it, deploy it and catch them
-  all! Well, maybe not the last one.
-description: ""
+summary: Create an archive for your macOS project
+description: |
+  The Step creates an archive using the `xcodebuild archive` command for your macOS project so you can share it, upload it, or deploy it.
+
+  ### Configuring the Step
+
+  Before you start:
+
+  Make sure your certificates are uploaded to Bitrise's **Code Signing** tab.
+
+  To configure the Step:
+
+  Under **app/pkg export configs**:
+
+  1. Select the signing method for your project Xcode should use in the **Export method** input.
+  1. (Optional) Specify a custom export option in the **Custom export options plist content** input. If you leave this input blank or the Step doesn't find an export method based on the provisioning profile(s), the Step will use the development method.
+
+  Under **xcodebuild configs**:
+
+  1. Add the path where your Xcode Project or Workspace is located in the **Project (or Workspace) path** input.
+  1. Add the scheme name you want to use to archive your project in the **Scheme name** input.
+  1. (Optional) By default, your Scheme defines which configuration is used, but you can override this option in the **Configuration name** input.
+  1. In the **Clean build before archive** input, select `yes`, if you want to run a `clean xcodebuild` before the `archive` action. Select `no` to skip this.
+  1. (Optional) If you wish to make your build times faster, and you don't need indexing, consider turning it off by setting **Disable indexing during the build** input to `yes`.
+
+  Under **force archive codesign settings**:
+
+  1. (Optional) If you want to force `xcodebuild` to use specified code sign identities or provisioning profiles, you can do so in the inputs under the **force archive codesign settings** tab.
+
+  Under **step output configs**:
+
+  1. Select an `xcodebuild` command log format in the **Output tool** input. Available options are `xcpretty`: The xcodebuild command's output will be prettified by xcpretty, and `xcodebuild`: Only the last 20 lines of raw xcodebuild output will be visible in the build log. The raw xcodebuild log is exported in both cases.
+  1. Specify which directory will contain the generated `.app` or `.pkg` files and the `.dSYM.zip` files in the **Output directory** input.
+  1. Provide a name to use as a basename for the generated files in the **Generated Artifact Name** input.
+  1. If you want to export the archive, set the **Export the generated archive?** input to `yes`. This will compress the generated files into a zip file and move them to a folder `output_dir`.
+  1. If you want to export the dsyms, set the **Export all dsyms?** input to `yes`.
+  1. Set **Enable verbose logging** input to `yes` to produce more informative logs.
+
+  ### Troubleshooting
+
+  If you receive an error about missing signing certificates during this Step, make sure that your certificates are uploaded to Bitrise's **Code Signing** tab.
+
+  ### Useful links
+
+  * [iOS code signing](https://devcenter.bitrise.io/en/code-signing/ios-code-signing.html)
+
+  ### Related Steps
+
+  * [Export macOS Xcode archive](https://www.bitrise.io/integrations/steps/export-xcarchive-mac)
+
+
 website: https://github.com/bitrise-steplib/steps-xcode-archive-mac
 source_code_url: https://github.com/bitrise-steplib/steps-xcode-archive-mac
 support_url: https://github.com/bitrise-steplib/steps-xcode-archive-mac/issues
@@ -51,7 +98,7 @@ inputs:
       Used for Xcode version 7 and above.
 
       Specifies a custom export options plist content that configures archive exporting.
-      If empty, step generates these options based on provisioning profile,
+      If empty, Step generates these options based on provisioning profile,
       with default values.
 
       Auto generated export options available for export methods:
@@ -61,7 +108,7 @@ inputs:
       - enterprise
       - development
 
-      If the step doesn't find an export method based on the provisioning profile(s), the development method will be used.
+      If the Step doesn't find an export method based on the provisioning profile(s), the development method will be used.
 
       Call `xcodebuild -help` for available export options.
     category: app/pkg export configs
@@ -103,7 +150,7 @@ inputs:
   opts:
     title: Working directory
     description: |
-      Working directory of the step.
+      Working directory of the Step.
       You can leave it empty to leave the working directory unchanged.
     category: xcodebuild configs
 - xcodebuild_options:
@@ -235,7 +282,7 @@ inputs:
   opts:
     title: Export all dsyms?
     description: |-
-      If this input is set to `yes` step will collect every dsym (.app dsym and framwork dsyms) in a directory, zip it and export the zipped directory path.
+      If this input is set to `yes` Step will collect every dsym (.app dsym and framwork dsyms) in a directory, zip it and export the zipped directory path.
       Otherwise only .app dsym will be zipped and the zip path exported.
     value_options:
     - "yes"
